# drilling-data

./: .env.example  .gitignore  CURSOR_CONTEXT.md  Data_Cleaning_Tutorial_Polars.ipynb  FINAL_DATABASE_SUMMARY.md  FINAL_SUMMARY.md  QUICK_WSL_START.md  README.md  WSL_MIGRATION_GUIDE.md  create_drilling_database.py  pyproject.toml  requirements.txt  sample_sql_queries.sql  setup.py  wsl_setup.sh  wsl_test.sh
.github/workflows/: ci.yml
SSIS_Project/: DrillingDataETL.sln
SSIS_Project/Connections/: CSV_Connection.conmgr  Excel_Connection.conmgr  SQL_Server_Connection.conmgr
SSIS_Project/Documentation/: DEPLOYMENT_GUIDE.md  README.md  SETUP_GUIDE.md
data/processed/: README.md  (+5 more)
docs/: API_REFERENCE.md  BEST_PRACTICES.md  DATABASE_SCHEMA.md  Data_Cleaning_Steps.md  ENVIRONMENT_CONFIG.md  HONGSA_DW_SUMMARY.md  PIPELINE.md  PROJECT_STRUCTURE.md  README.md  SQL_SERVER_IMPORT_GUIDE.md  USAGE_GUIDE.md  USER_GUIDE.md
reports/: sql_sample_queries_run_20251031_004731_trust.txt  sql_sample_queries_run_20251031_004930_trust_v2.txt
scripts/: create_hongsa_dw.py  load_to_sqlserver.py  populate_hongsa_dw_direct.py  validate_normalized_sql_server.py  verify_hongsa_dw.py
sql/: README_HONGSA_DW.md  add_foreign_keys.sql  check_data.sql  create_drilling_database_schema.sql  create_hongsa_dw_schema.sql  create_sql_server_schema.sql  create_tables.sql  dax_queries_examples.md  load_drilling_database_data.sql  load_sql_server_data.sql  populate_hongsa_dw_data.sql  sample_sql_queries_updated.sql  setup_hongsa_dw_complete.sql  ssas_tabular_setup_guide.md  คู่มือใช้งาน_HONGSA_DW.md
src/: __init__.py
(+32 files in other folders)
